# clumsy-web

./: .gitignore  README.md  index.html  lib_bg.e7c2db59.wasm  main.deef64da.js  main.deef64da.js.map  package-lock.json  package.json  postcss.config.js  tailwind.14297c5d.css  tailwind.14297c5d.css.map  tsconfig.json
.github/workflows/: ci.yaml
lib/: Cargo.toml
lib/src/: lib.rs
src/: index.html  main.tsx
src/components/: console.tsx  editor.tsx  file_system.tsx
