[package]
name = "lib"
version = "0.1.0"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.clumsy]
git = "https://github.com/uzimaru0000/clumsy"
features = ["json"]

[dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
hex = "0.4.2"
web-sys = { version = "0.3.45", features = ["console"] }
serde = "1.0.116"

[dependencies.chrono]
features = ["wasmbind"]
